[tool.poetry]
name = "research-papers-implementations"
version = "0.1.0"
description = "implementations from nn.labml.ai"
authors = ["VGuch <ssslllava11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
